<resources>
    <string name="app_name">PassWord Archive</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="esqueci_senha">esqueci minha senha</string>
    <string name="entrar">Entrar</string>
    <string name="fazer_cadastro">não tem conta? Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="procurar_contas">Procurar por contas</string>
    <string name="username">Seu Nome</string>
    <string name="user_photo">Foto do usuário</string>
    <string name="configuracoes">Configurações</string>
    <string name="alterar_nome">Alterar nome</string>
    <string name="alterar_email">Alterar e-mail</string>
    <string name="seguranca">Segurança</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="biometria">Biometria</string>
    <string name="outros">Outros</string>
    <string name="alterar_idioma">Mudar idioma</string>
    <string name="sair_do_app">Sair do aplicativo</string>
    <string name="voltar_tela">Voltar tela</string>
    <string name="voltar_home">Voltar home</string>
    <string name="alterar">Alterar</string>
    <string name="erro_senha_pequena">Digite uma senha com no mínimo 6 caracteres</string>
    <string name="conta_ja_cadastrada">Conta já cadastrada</string>
    <string name="email_invalido">E-mail inválido</string>
    <string name="sem_internet">Sem conexão com a internet</string>
    <string name="erro_cadastro_generico">Erro ao cadastrar usuário</string>
    <string name="preencha_todos_campos">Preencha todos os campos!</string>
    <string name="erro_ao_fazer_login">Erro ao fazer login do usuário</string>
    <string name="cadastro_sucesso">Cadastro realizado com sucesso!</string>
    <string name="senha_diferentes">Senhas diferentes!</string>
    <string name="entrar_usando_digital">Entrar utilizando impressão digital</string>
    <string name="autenticacao">Autenticação</string>
    <string name="use_sua_digital">Use sua impressão digital</string>
    <string name="cancel_biometria">Cancelar</string>
    <string name="tela_principal">Tela Principal</string>
    <string name="modo_aviao_ativado">Modo avião ativado</string>
    <string name="modo_aviao_desativado">Modo avião desativado</string>
    <string name="bem_vindo">Bem vindo</string>
    <string name="login_sucesso">Login realizado com sucesso!</string>
    <string name="selecionar_idioma">Selecionar idioma</string>
    <string name="idioma_portugues">Português</string>
    <string name="idioma_ingles">Inglês</string>
    <string name="foto_alterada">Foto alterada com sucesso!</string>
    <string name="nome_alterado">Nome alterado com sucesso!</string>
    <string name="deletar">Deletar</string>
    <string name="editar">Editar</string>
</resources>