<?xml version="1.0" encoding="UTF-8" ?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#282828"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/name_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"/>


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_app"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/placeholder"
            android:textColor="@color/white"
            android:padding="12dp"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/background_input"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textColorHint="@color/placeholder"
            android:textColor="@color/white"
            android:padding="12dp"
            android:autofillHints="password" />

        <TextView
            android:id="@+id/esqueci_minha_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esqueci_senha"
            android:textColor="@color/white"
            android:layout_below="@id/senha"
            android:layout_marginStart="52dp"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:clickable="true"
            android:focusable="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/esqueci_minha_senha"
            android:layout_marginTop="30dp"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:gravity="center"
            android:text="@string/entrar"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/background_input"
            android:textColor="@color/white"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/entrar"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cadastreSe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fazer_cadastro"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:clickable="true"
                android:focusable="true"/>

            <LinearLayout
                android:id="@+id/entrarUsandoDigital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                tools:ignore="UseCompoundDrawables">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entrar_usando_digital"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
                <ImageView
                    android:layout_marginTop="5dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/fingerprint"
                    android:importantForAccessibility="no" />
            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>

</ScrollView>